app/styles/_general.scss
/* ... */
// ====



//
// Content internal
//

.section-title {
  margin-top: 0;
  padding-top: 20px;
  font-size: ($fs-medium)+.6;
  color: $font-primary;

  span {
    font-family: $ff-light;
    font-size: ($fs-normal)+.6;
  }
}

.sub-nav {
  background-color: $bg-header;
  overflow: hidden;
  @include transition(all, .2s, 0s, linear);

  li {
    position: relative;

    &::before {
      content: '';
      width: 5px;
      height: 50px;
      position: absolute;
      left: 38px;
      top: 0;
      background-color: #00457C;
      z-index: 1;
    }
  }

  a {
    font-size: $fs-normal;

    &::before {
      z-index: 2;
      width: 10px;
      height: 10px;
      margin-left: 20px;
      @include bdr(100%);
      border: 2px solid #90CAF9;
      background-color: transparent;
    }

    &:hover {
      background-color: transparent !important;

      &::before { background-color: $link-primary; }
    }
  }
}

.list-tips {
  height: 100%;
  min-height: 100px;
}

.btn-tip {
  min-height: 45px !important;
  outline: none;
  min-height: 20px;
  padding: 10px;
  width: 100%;
  border: none;
  display: block;
  text-align: right;
  font-size: ($fs-medium)-.2;
  @extend .card;
  @include apr(none);
  @include transition(all, .2s, 0s, linear);

  &:hover,
  &.active {
    color: $link-primary;
    background-color: $btn-primary;

    &.upas {
      &::before { @include path('nav/icon-upas-hover.svg'); }
    }

    &.pharmacy {
      &::before { @include path('nav/icon-pharmacy-hover.svg'); }
    }

    &.vaccine {
      &::before { @include path('nav/icon-vaccine-hover.svg'); }
    }

    &.telephones {
      &::before { @include path('nav/icon-telephones-hover.svg'); }
    }

    &.caution {
      &::before { @include path('nav/icon-caution-hover.svg'); }
    }

    &.prevention {
      &::before { @include path('nav/icon-prevention-hover.svg'); }
    }
  }

  &::before {
    content: '';
    width: 22px;
    height: 22px;
    position: absolute;
    left: 10px;
    top: 10px;
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center center;
  }

  &.upas {
    &::before { @include path('nav/icon-upas.svg'); }
  }

  &.pharmacy {
    &::before { @include path('nav/icon-pharmacy.svg'); }
  }

  &.vaccine {
    &::before {
      background-size: 50%;
      @include path('nav/icon-vaccine.svg');
    }
  }

  &.telephones {
    &::before { @include path('nav/icon-telephones.svg'); }
  }

  &.caution {
    &::before { @include path('nav/icon-caution.svg'); }
  }

  &.prevention {
    &::before { @include path('nav/icon-prevention.svg'); }
  }
}

.health-tips-default {
  text-align: center;

  figure {
    margin: 70px auto 40px auto;
    position: relative;

    img { max-width: 100%; }
  }

  h4 {
    color: $btn-primary;
    font-size: ($fs-medium)+.6;
    font-family: $ff-bold;
  }

  p {
    font-size: ($fs-normal)+.2;
  }
}

.map {
  width: 100%;
  height: 620px;
}

.map-info {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 80px;
  z-index: 9999;
  background-color: $link-primary;
  @include bsd(0, -3px, 3px, rgba(0, 0, 0, .3));

  h5 {
    font-family: $ff-bold;
    font-size: ($fs-medium)-.2;
    color: $btn-primary;
    margin-bottom: 10px;
  }

  h6 {
    font-family: $ff-light;
    font-size: ($fs-normal)+.4;
    color: $font-primary;
  }
}

// ====



//
// Health tips
//

// vacinas
.text-primary {
  padding-top: 10px;
  color: $bg-modal;
  font-size: ($fs-normal)+.2;
  list-style-type: circle;
  position: relative;

  &.ht {
    &::before {
      content: '•';
      margin-right: 5px;
      display: inline-block;
      vertical-align: middle;
      position: relative;
    }
  }
}

// telefones uteis
.telephone-list {
  text-align: center;
  padding: 20px;
}

.telephone-item {
  height: 220px;
  width: 220px;
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 40px;

  img {
    padding: 20px;
    max-width: 100%;
    background-color: #EEEEEE;
  }

  figcaption {
    font-size: ($fs-medium)-.2;
    font-family: $ff-bold;
    color: $btn-primary;
    margin-top: 10px;

    span {
      font-family: $ff-light;
      display: block;
    }
  }
}

// ====



//
// Health Daily
//

.health-daily-avatar, .total-participants {
  float: left;
}

.health-daily-avatar {
  width: 180px;
  margin: 31px 50px 20px 19px;
  display: inline-block;

  img {
    max-width: 100%;
    @include bdr(100%);
  }

  figcaption {
    text-align: center;
    color: $font-primary;
    font-size: ($fs-normal)*2;
    margin-top: 20px;
    font-family: $ff-regular;

    span {
      margin-top: -5px;
      display: block;
      font-family: $ff-light;
      font-size: ($fs-normal)+.8;
    }
  }
}

.total-participants {
  margin: 22px 0 20px 0;

  div {
    float: left;
  }

  .geral {
    float: left;
    clear: left;
    padding: 0;
  }

  .status  {
    padding: 100px 0 0 0;

    figure {
      img {
        @include bdr(100%);
        @include bsd(0px, 7px, 12px, rgba(0, 0, 0, .3));
      }
    }

    ul {

      li {
        float: left;
        width: 155px;
        cursor: pointer;
      }

      li:nth-child(1) {
        margin: 0 15px 0 0;
      }

      figcaption {
        float: right;
        font-family: $ff-light;
        font-size: ($fs-normal)+.6;
        color: $font-primary;

        span {
          font-family: $ff-bold;
        }

        p {
          font-size: ($fs-normal)+.2;
        }
      }
    }
  }

  .sort-by {
    float: right;
  }

  h1 {
    font-family: $ff-light;
    font-size: ($fs-medium)+.4;
    color: $font-primary;
    margin: 10px 0 20px 0;

    span {
      font-family: $ff-bold;
    }
  }

}

.frequency {
  position: relative;

  h2, h3 {
    float: left;
  }
  h3 {
    clear: both;
  }
  .sort-by {
    position: absolute;
    top: 15px;
    right: 15px;
  }
}
/* ... */

